Bug 413549 - Auto-hide panel keeps reappearing when HideUtilityWindowsForInactive=false is set in kwinrc
Summary: Auto-hide panel keeps reappearing when HideUtilityWindowsForInactive=false is...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.14.5
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 379508 402912 444657 468356 499095 (view as bug list)
Depends on:
Blocks: 478797
  Show dependency treegraph
 
Reported: 2019-10-28 11:55 UTC by Zdeněk Válek
Modified: 2025-01-27 20:34 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zdeněk Válek 2019-10-28 11:55:13 UTC
SUMMARY
This problem was already reported for Ubuntu by Sergio Callegari on 2015-11-01 on https://bugs.launchpad.net/ubuntu/+source/plasma-desktop/+bug/1512103
It was confirmed there, but I did not find matching bug report here and it is still not fixed in my Debian Buster (first observed in Stretch after some update). This problem seems to exist across distributions.

STEPS TO REPRODUCE
1. Configure a panel to autohide. I am using two autohide panels in my case.
2. When the panel is hidden, do something (open new window, or just change active window)

OBSERVED RESULT
The hidden panel appears and remains on top of all windows until I move mouse cursor over and out.

EXPECTED RESULT
The panel shall remain hidden unless I touch the screen edge with mouse cursor.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 4.19.0-6-amd64 #1 SMP Debian 4.19.67-2+deb10u1 (2019-09-20) x86_64 GNU/Linux
(available in About System)
KDE Plasma Version: don't know how to find, debian package: libplasma3: 4:4.14.38-3
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
I am using two monitors, having two auto hide panels on first monitor (on top and bottom). Even if I create a new panel, there is same problem with it.
I am not sure if I have the product and component right, did not find the panel there and I don't understand internal KDE structure.
More information can be found on ubuntu's report (link above).
Comment 1 Nate Graham 2019-10-28 18:04:55 UTC
You can find your Plasma version by using the Info Center app or running `plasmashell --version` in a terminal window.
Comment 2 Zdeněk Válek 2019-10-28 18:52:16 UTC
The plasmashell version is 5.14.5, as you have already figured out. Thank you also for correcting all the other fields.
Comment 3 Zdeněk Válek 2019-10-29 01:02:22 UTC
I was able to find the option which causes this unwanted behavior on my setup. It is in kwin configuration file kwinrc:

[Windows]
HideUtilityWindowsForInactive=false

When set to false, all hidden panels appear whenever I switch active window and the panels remain visible until I manualy hide them with mouse.
When set to true, the panels are OK.

I think this behavior shall be fixed. I don't know what the option is for and how it got into my configuration, but IMHO it should not affect the panels this way. 
Maybe the Product shall be changed to kwin, but it affects panel, so I am not sure with that. My kwin is 5.14.5
Comment 4 Nate Graham 2019-10-29 16:48:06 UTC
Thanks for narrowing down the issue to the exact setting that causes it. That's super helpful.

Moving to KWin for now to get the KWin developers' opinion on the matter.
Comment 5 Öyvind Saether 2020-10-04 11:10:33 UTC
> Moving to KWin for now to get the KWin developers' opinion on the matter.

"Hiding is triggered from Plasma side"
https://bugs.kde.org/show_bug.cgi?id=402912#c1

There's your KWin developer opinion. Something tells me that it hasn't changed the last 20 months. 

It is possible to work-around this bug by setting HideUtilityWindowsForInactive=true as noted in January 2019, but that means playlist windows disappear which is a slight problem if you want to drag files from Dolphin to a playlist. And that's why I don't use KDE Plasma: the choices are a) mostly working panel autohide OR the ability to drag and drop to several applications I use regularly.

The real punch-line is that the list of panel auto-hide related bugs I listed at:

https://linuxreviews.org/KDE_Plasma#Broken_Panel_Auto-Hiding_.28and_other_problems.29

in July 2019 are still open, every single one.. and lots of new ones have been reported in the meantime.
Comment 6 makosol 2022-11-09 08:52:16 UTC
I encounter this bug (panel doesn't hide when it should) in lastest KDE Neon.
Comment 7 veggero 2022-12-07 15:12:06 UTC
*** Bug 379508 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2024-06-07 16:42:10 UTC
*** Bug 402912 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2024-06-07 16:42:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5856
Comment 10 Zamundaaa 2024-06-07 19:15:09 UTC
Git commit a6a85466cd9c694c30e7c31c6ce6fb288e89474d by Xaver Hugl.
Committed on 07/06/2024 at 19:05.
Pushed by zamundaaa into branch 'master'.

workspace: restrict showing windows because HideUtilityWindowsForInactive=false to actual utility windows

M  +2    -1    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/a6a85466cd9c694c30e7c31c6ce6fb288e89474d
Comment 11 Zamundaaa 2024-06-07 19:25:28 UTC
Git commit c4d4d3afaabc1238603e24ef6f39112b4d9c0157 by Xaver Hugl.
Committed on 07/06/2024 at 19:15.
Pushed by zamundaaa into branch 'Plasma/6.1'.

workspace: restrict showing windows because HideUtilityWindowsForInactive=false to actual utility windows


(cherry picked from commit a6a85466cd9c694c30e7c31c6ce6fb288e89474d)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +2    -1    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/c4d4d3afaabc1238603e24ef6f39112b4d9c0157
Comment 12 Nate Graham 2025-01-27 20:26:26 UTC
*** Bug 468356 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2025-01-27 20:26:28 UTC
*** Bug 444657 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2025-01-27 20:26:48 UTC
*** Bug 499095 has been marked as a duplicate of this bug. ***