workspace: restrict showing windows because HideUtilityWindowsForInactive=false to actual utility windows

BUG: 413549